--- a/public/views/courses/list.html
+++ b/public/views/courses/list.html
@@ -7,7 +7,7 @@
 <div class="row">
 	<div class="col-md-4" data-ng-repeat="course in courses">
 		<div class="panel panel-default">
-		  <a data-ng-href="#/courses/{{course._id}}">
+		  <a data-ng-href="#/courses/{{course._id}}/edit">
 		  <div class="panel-body">
 		    <h2 class="panel-title lead"><span class="pull-left">{{course.name}}</span>
 		    	<small class="pull-right">
