--- a/public/views/classrooms/list.html
+++ b/public/views/classrooms/list.html
@@ -1,6 +1,10 @@
-<section class="col-md-12" ng-controller="ClassroomsController">
-    <hr/>
-    <h2 class="">Classrooms</h2>
+<section ng-controller="ClassroomsController">
+    <h4><span class="glyphicon glyphicon-ok"></span> Classrooms</h4>
+
+    <div class="well well-lg text-center" data-ng-hide="data.classroom || data.course.classroom.length > 0">
+        <p class="lead">No classrooms yet :-(</p>
+        <button class="btn btn-default btn-lg" ng-click="newClassroom()" data-ng-hide="data.classroom">Create new classroom</button>
+    </div>
 
 	<ul class="classrooms unstyled" data-ng-hide="data.classroom">
 		<li data-ng-repeat="course_classroom in data.course.classrooms">
@@ -11,6 +15,7 @@
 	</ul>
     <div ng-include="'views/classrooms/edit.html'" data-ng-show="data.classroom != undefined"></div>
     <div>
-        <button class="btn btn-success" ng-click="newClassroom()" data-ng-hide="data.classroom">Create new classroom</button>
+        <button class="btn btn-success" ng-click="newClassroom()" 
+        data-ng-hide="data.classroom || data.course.classrooms.length === 0">Create new classroom</button>
     </div>
 </section>
