--- a/public/views/courses/edit.html
+++ b/public/views/courses/edit.html
@@ -1,10 +1,18 @@
-<section class="col-md-6 col-md-offset-3" data-ng-controller="CoursesController">
-    <div class="page-header">
-        <h2 data-ng-hide="data.course._id">Create your course</h2>
-        <h2 data-ng-show="data.course._id">Edit your course</h2>
-    </div>
+<div data-ng-controller="CoursesController">
+    
+<div class="page-header">
+    <h2>Course</h2>
+</div>
 
-    <form class="form clearfix" data-ng-submit="createOrUpdate()">
+<aside class="col-md-12">
+    <h3 class="editable" ng-click="showEdit = true" ng-show="!showEdit && data.course._id">
+    {{data.course.name}} 
+        <small>
+            {{data.course.code}}
+        </small>
+    </h3>
+
+    <form class="form clearfix fade-in" ng-show="showEdit || !data.course._id" data-ng-submit="createOrUpdate()">
         <div class="form-group">
             <label class="control-label" for="name">Name</label>
             <input type="text" data-ng-model="data.course.name" id="name" placeholder="My course" required class="form-control input-lg" autofocus>
@@ -16,17 +24,26 @@
         </div>
 
         <div data-ng-show="data.course._id">
+            <button type="button" class="btn btn-link pull-left" 
+            ng-click="showEdit = false">Cancel</button>
             <button type="submit" class="btn btn-success btn-lg pull-right" data-ng-hide="data.content || data.classroom">Update course  <span class="glyphicon glyphicon-ok-sign"></span></button>
         </div>
         <div data-ng-hide="data.course._id">
-            <button type="submit" class="btn btn-success btn-lg pull-right" data-ng-hide="data.content || data.classroom">Create course  <span class="glyphicon glyphicon-ok-sign"></span></button>
+            <button type="submit" class="btn btn-success btn-lg pull-right">Create course  <span class="glyphicon glyphicon-ok-sign"></span></button>
         </div>
     </form>
 
-    <div ng-include="'views/content/list.html'"
+</aside>
+
+<div class="row">
+
+<section>
+    <div class="col-md-6" ng-include="'views/content/list.html'"
          class="row"
          data-ng-show="global.user.permissions.classroom && data.course._id"></div>
-    <div ng-include="'views/classrooms/list.html'"
+    <div class="col-md-6" ng-include="'views/classrooms/list.html'"
          class="row"
          data-ng-show="global.user.permissions.manage && data.course._id"></div>
 </section>
+</div>
+</div>
