Removes course editing glitch

--- a/public/style/main.less
+++ b/public/style/main.less
@@ -13,6 +13,10 @@
   src: local('Lato Regular'), local('Lato-Regular'), url(../fonts/lato400.woff) format('woff');
 }
 
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
+
 body,
 h1,
 h2,
