Adds version to script

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -5,4 +5,5 @@
     window.school = <%-school%>;
     window.env = <%-env%>;
     window.laereHost = <%-host%>;
+    window.version = "<%=version%>";
 </script>
