Encapsulates content logic on its own controller

--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -56,6 +56,8 @@
 <!--Courses-->
 <script type="text/javascript" src="script/course/course-service.js"></script>
 <script type="text/javascript" src="script/course/course-controller.js"></script>
+<!--Contents-->
+<script type="text/javascript" src="script/content/content-controller.js"></script>
 <!--Classrooms-->
 <script type="text/javascript" src="script/classroom/classroom-service.js"></script>
 <script type="text/javascript" src="script/classroom/classroom-controller.js"></script>
