--- a/public/views/contents/list.html
+++ b/public/views/contents/list.html
@@ -1,4 +1,4 @@
-<section>
+<section data-ng-controller="ContentsController">
     <h4><span class="glyphicon glyphicon-file"></span> Contents</h4>
 
     <div class="well well-lg text-center" data-ng-hide="data.content || data.course.contents.length > 0">
