Implements first version of embed directive

--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -58,6 +58,7 @@
 <script type="text/javascript" src="script/course/course-controller.js"></script>
 <!--Contents-->
 <script type="text/javascript" src="script/content/content-controller.js"></script>
+<script type="text/javascript" src="script/content/embed-directive.js"></script>
 <!--Classrooms-->
 <script type="text/javascript" src="script/classroom/classroom-service.js"></script>
 <script type="text/javascript" src="script/classroom/classroom-controller.js"></script>
