--- a/public/views/contents/edit.html
+++ b/public/views/contents/edit.html
@@ -4,6 +4,7 @@
             <label class="control-label" for="url">URL</label>
             <input type="text" data-ng-model="data.content.url" id="url" placeholder="Content URL" class="form-control input-lg">
         </div>
+        <laere-embed content="data.content"></laere-embed>
         <div class="form-group">
             <div class="radio">
                 <label class="control-label" for="type0">Video</label>
