classroom page basic structure

--- a/public/style/main.less
+++ b/public/style/main.less
@@ -75,6 +75,7 @@ h6 {font-weight: 300;}
 }
 
 .page-header {
+    h2 {margin-top: 0;}
     .pull-right {
         margin-top: 20px;
     }
@@ -90,6 +91,29 @@ a.list-group-item .list-group-item-heading {padding-right: 100px;}
         background: #FFFEDD;
         cursor: text;
     }
+}
+
+// .sidebar-progress .panel a {color:#555;}
+.sidebar-progress .panel-heading .badge {
+  background-color: #eee;
+  color: #bbb;
+}
+.progress {
+  height: 6px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+.c-video {
+  text-align: center;
+}
+.badge-notif {
+  margin-left: 4px;
+}
+.issues-list {
+  .form-control {
+    margin-top: 10px;
+    margin-bottom: 8px;
+  }
 }
 
 footer {
