Shows teacher classrooms

--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -65,6 +65,8 @@
 <!--Progress-->
 <script type="text/javascript" src="script/progress/progress-service.js"></script>
 <script type="text/javascript" src="script/progress/progress-controller.js"></script>
+<!--Teach-->
+<script type="text/javascript" src="script/teach/teach-controller.js"></script>
 <!--Global-->
 <script type="text/javascript" src="script/misc/directives.js"></script>
 <script type="text/javascript" src="script/misc/index-controller.js"></script>
