Allows for selecting content and encapsulates progress view controller

--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -65,6 +65,7 @@
 <!--Progress-->
 <script type="text/javascript" src="script/progress/progress-service.js"></script>
 <script type="text/javascript" src="script/progress/progress-controller.js"></script>
+<script type="text/javascript" src="script/progress/progress-view-controller.js"></script>
 <!--Teach-->
 <script type="text/javascript" src="script/teach/teach-controller.js"></script>
 <!--Global-->
