--- a/public/views/progress/panel.html
+++ b/public/views/progress/panel.html
@@ -1,24 +1,25 @@
 <div class="panel panel-default">
     <div class="panel-heading clearfix">
-
-        <button class="btn btn-default btn-pages prev pull-left"><span class="glyphicon glyphicon-circle-arrow-left"></span></button>
-
-        <button class="btn btn-default btn-pages next pull-right"><span class="glyphicon glyphicon-circle-arrow-right"></span></button>
-
+        <button class="btn btn-default btn-pages prev pull-left"
+                ng-click="backward()">
+            <span class="glyphicon glyphicon-circle-arrow-left"></span>
+        </button>
+        <span>{{data.content.name}}</span>
+        <button class="btn btn-default btn-pages next pull-right"
+                ng-click="forward()">
+            <span class="glyphicon glyphicon-circle-arrow-right"></span>
+        </button>
     </div>
     <div class="panel-body c-video">
-        <iframe width="560" height="315" src="//www.youtube.com/embed/rgK0eYISasE" frameborder="0" allowfullscreen></iframe>
-
+        <laere-embed></laere-embed>
         <div class="pull-right">
             <button class="btn btn-default btn-primary"><span class="glyphicon glyphicon-check"></span> Responder</button>
             <button class="btn btn-default"><span class="glyphicon glyphicon-eye-close"></span> Marcar como não visualizado</button>
         </div>
     </div>
-
     <div class="panel-footer issues-list">
-
         <div class="media">
-            <div class="pull-left" href="#">
+            <div class="pull-left">
                 <span class="glyphicon glyphicon-user"></span>
             </div>
             <div class="media-body">
@@ -28,9 +29,8 @@
                 </p>
             </div>
         </div>
-
         <div class="media">
-            <div class="pull-left" href="#">
+            <div class="pull-left">
                 <span class="glyphicon glyphicon-user"></span>
             </div>
             <div class="media-body">
@@ -40,7 +40,6 @@
                 </p>
             </div>
         </div>
-
         <textarea class="form-control" rows="2" placeholder="Dúvidas e comentários"></textarea>
         <button class="btn btn-default btn-block btn-success">Publicar</button>
     </div>
