--- a/public/views/progress/sidebar.html
+++ b/public/views/progress/sidebar.html
@@ -9,11 +9,15 @@
 
     </div>
     <div class="list-group">
-        <a href="{{content.url}}" class="list-group-item" data-ng-repeat="content in course.contents">
+        <div ng-click="data.selectedContentIndex = $index"
+             class="list-group-item"
+             style="cursor: pointer"
+             data-ng-class="{'active': data.content === content}"
+             data-ng-repeat="content in course.contents">
             <span class="glyphicon glyphicon-asterisk pull-right badge-notif"></span>
             <span class="badge">Evaluate</span>
             <h5 class="list-group-item-heading">{{content.name}}</h5>
             <small class="list-group-item-text">{{content.description}}</small>
-        </a>
+        </div>
     </div>
 </div>
