--- a/public/views/progress/view.html
+++ b/public/views/progress/view.html
@@ -1,16 +1,13 @@
 <section data-ng-controller="ProgressController">
-
-<div class="page-header clearfix">
-	<div class="col-md-9">
-		<h2>{{course.name}} <small>{{course.code}}</small></h2>
-	</div>
-</div>
-
-<div class="row">
-	<div class="col-md-4 sidebar-progress" ng-include="'views/progress/sidebar.html'">
-	</div>
-	<div class="col-md-8" ng-include="'views/progress/panel.html'">
-	</div>
-</div>
-
+    <div class="page-header clearfix">
+        <div class="col-md-9">
+            <h2>{{course.name}} <small>{{course.code}}</small></h2>
+        </div>
+    </div>
+    <div class="row" data-ng-controller="ProgressViewController">
+        <div class="col-md-4 sidebar-progress" ng-include="'views/progress/sidebar.html'">
+        </div>
+        <div class="col-md-8" ng-include="'views/progress/panel.html'" data-ng-show="data.content">
+        </div>
+    </div>
 </section>
