--- a/public/views/teach/view.html
+++ b/public/views/teach/view.html
@@ -3,7 +3,6 @@
         <div class="col-md-9">
             <h2>{{course.name}} <small>{{course.code}}</small></h2>
         </div>
-
         <div class="col-md-3">
             <select class="form-control">
                 <option>Michael Jackson</option>
@@ -13,14 +12,11 @@
                 <option>Lorem Ornare</option>
             </select>
         </div>
-
     </div>
-
-    <div class="row">
+    <div class="row" data-ng-controller="ProgressViewController">
         <div class="col-md-4 sidebar-progress" ng-include="'views/progress/sidebar.html'">
         </div>
         <div class="col-md-8" ng-include="'views/progress/panel.html'">
         </div>
     </div>
-
 </section>
