Stores seen property on solution

--- a/public/views/progress/panel.html
+++ b/public/views/progress/panel.html
@@ -14,7 +14,7 @@
         <laere-embed></laere-embed>
         <div class="pull-right">
             <button class="btn btn-default btn-primary"><span class="glyphicon glyphicon-check"></span> Responder</button>
-            <button class="btn btn-default"><span class="glyphicon glyphicon-eye-close"></span> Marcar como não visualizado</button>
+            <button class="btn btn-default" ng-click="unsee()"><span class="glyphicon glyphicon-eye-close"></span> Marcar como não visualizado</button>
         </div>
     </div>
     <div class="panel-footer issues-list">
