Shows progress on sidebar

--- a/public/views/progress/panel.html
+++ b/public/views/progress/panel.html
@@ -13,11 +13,11 @@
     <div class="panel-body c-video">
         <laere-embed></laere-embed>
         <div class="pull-right">
-            <button class="btn btn-default btn-primary"><span class="glyphicon glyphicon-check"></span> Responder</button>
+            <button class="btn btn-default btn-primary hide"><span class="glyphicon glyphicon-check"></span> Responder</button>
             <button class="btn btn-default" ng-click="unsee()"><span class="glyphicon glyphicon-eye-close"></span> Marcar como não visualizado</button>
         </div>
     </div>
-    <div class="panel-footer issues-list">
+    <div class="panel-footer issues-list hide">
         <div class="media">
             <div class="pull-left">
                 <span class="glyphicon glyphicon-user"></span>
