--- a/public/views/progress/sidebar.html
+++ b/public/views/progress/sidebar.html
@@ -3,7 +3,7 @@
         <span class="badge pull-right">{{course.contents.length}}</span> {{classroom.name}}
 
         <div class="progress">
-            <div class="progress-bar" style="width: 20%;">
+            <div class="progress-bar" ng-style="data.seenProgressStyle">
             </div>
         </div>
 
