redoing course UI

--- a/public/style/main.less
+++ b/public/style/main.less
@@ -93,7 +93,10 @@ a.list-group-item .list-group-item-heading {padding-right: 100px;}
     }
 }
 
-// .sidebar-progress .panel a {color:#555;}
+.btn-types {
+  margin-top: -10px;
+  margin-bottom: 5px;
+}
 .sidebar-progress .panel-heading .badge {
   background-color: #eee;
   color: #bbb;
@@ -115,6 +118,8 @@ a.list-group-item .list-group-item-heading {padding-right: 100px;}
     margin-bottom: 8px;
   }
 }
+
+.list-group-item h4 {margin-top: 0;}
 
 footer {
     position:fixed;
