--- a/public/views/classrooms/edit.html
+++ b/public/views/classrooms/edit.html
@@ -1,68 +1,79 @@
-<section class="col-md-12">
-    <form class="form clearfix" data-ng-submit="createOrUpdate()">
-        <div class="form-group">
-            <label class="control-label" for="name">Name</label>
-            <input type="text" data-ng-model="data.classroom.name" id="name" placeholder="Classroom name" class="form-control input-lg">
-        </div>
-        <div class="form-group">
-            <label class="control-label" for="startDate">Start Date</label>
-            <input type="text"
-                   id="startDate"
-                   class="form-control input-lg"
-                   datepicker-popup="dd-MMMM-yyyy"
-                   ng-model="data.classroom.startDate"
-                   required="true" />
-        </div>
-        <div class="form-group">
-            <label class="control-label" for="endDate">End Date</label>
-            <input type="text"
-                   id="endDate"
-                   class="form-control input-lg"
-                   datepicker-popup="dd-MMMM-yyyy"
-                   ng-model="data.classroom.endDate"
-                   required="true" />
-        </div>
-        <div data-ng-show="data.classroom._id">
-            <!--TEACHERS-->
-            <div class="form-group">
-                <label class="control-label" for="addTeacher">Add Teacher</label>
-                <input type="text"
-                       class="form-control input-lg"
-                       id="addTeacher"
-                       ng-model="data.classroom.teacherUsername"
-                       typeahead-on-select="addTeacher($item)"
-                       typeahead="teacher.username for teacher in data.teachers | filter:$viewValue | filter:existingTeacher | limitTo:8">
-            </div>
-            <div>
-                <p>Teachers:</p>
-                <ul data-ng-repeat="teacher in data.classroom.teachers">
-                    <li>{{teacher.name}} ({{teacher.username}})
-                        <i class="glyphicon glyphicon-trash" ng-click="data.classroom.teachers.splice($index, 1)"></i>
-                    </li>
-                </ul>
-            </div>
-            <!--STUDENTS-->
-            <div class="form-group">
-                <label class="control-label" for="addStudent">Add Student</label>
-                <input type="text"
-                       class="form-control input-lg"
-                       id="addStudent"
-                       ng-model="data.classroom.studentUsername"
-                       typeahead-on-select="addStudent($item)"
-                       typeahead="student.username for student in data.students | filter:$viewValue | filter:existingStudent | limitTo:8">
-            </div>
-            <div>
-                <p>Students:</p>
-                <ul data-ng-repeat="progress in data.classroom.progresses">
-                    <li>{{progress.student.name}} ({{progress.student.username}})
-                        <i class="glyphicon glyphicon-trash" ng-click="removeStudent(progress)"></i>
-                    </li>
-                </ul>
-            </div>
-        </div>
+<form class="form clearfix" data-ng-submit="createOrUpdate()">
+    <div class="form-group">
+        <label class="control-label" for="name">Name</label>
+        <input type="text" data-ng-model="data.classroom.name" id="name" placeholder="Classroom name" class="form-control input-lg">
+    </div>
+    <div class="form-group">
+        <label class="control-label" for="startDate">Start Date</label>
+        <input type="text"
+               id="startDate"
+               class="form-control input-lg"
+               datepicker-popup="dd-MMMM-yyyy"
+               ng-model="data.classroom.startDate"
+               required="true" />
+    </div>
+    <div class="form-group">
+        <label class="control-label" for="endDate">End Date</label>
+        <input type="text"
+               id="endDate"
+               class="form-control input-lg"
+               datepicker-popup="dd-MMMM-yyyy"
+               ng-model="data.classroom.endDate"
+               required="true" />
+    </div>
 
-        <button type="submit" class="btn btn-success btn-lg" data-ng-show="data.classroom._id != null">Update classroom  <span class="glyphicon glyphicon-ok-sign"></span></button>
-        <button type="submit" class="btn btn-success btn-lg" data-ng-hide="data.classroom._id != null">Create classroom  <span class="glyphicon glyphicon-ok-sign"></span></button>
-        <button type="button" class="btn btn-link btn-lg" ng-click="cancelClassroomEdit()">Cancel</span></button>
-    </form>
-</section>
+
+    <button type="submit" class="btn btn-success btn-lg" data-ng-show="data.classroom._id != null">Update classroom  <span class="glyphicon glyphicon-ok-sign"></span></button>
+    <button type="submit" class="btn btn-success btn-lg" data-ng-hide="data.classroom._id != null">Create classroom  <span class="glyphicon glyphicon-ok-sign"></span></button>
+    <button type="button" class="btn btn-link btn-lg" ng-click="cancelClassroomEdit()">Cancel</span></button>
+
+    <hr>
+
+    <div data-ng-show="data.classroom._id" class="row">
+      <div class="col-md-6">
+        <!--TEACHERS-->
+        <div class="form-group">
+            <label class="control-label" for="addTeacher">Add Teacher</label>
+            <input type="text"
+                   placeholder="Start type the name"
+                   class="form-control input-sm"
+                   id="addTeacher"
+                   ng-model="data.classroom.teacherUsername"
+                   typeahead-on-select="addTeacher($item)"
+                   typeahead="teacher.username for teacher in data.teachers | filter:$viewValue | filter:existingTeacher | limitTo:8">
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading"><span class="badge pull-right">{{data.classroom.teachers.length}}</span> Teachers</div>
+            <ul data-ng-repeat="teacher in data.classroom.teachers" class="list-group">
+                <li class="list-group-item">{{teacher.name}} ({{teacher.username}})
+                  <button type="button" class="btn btn-danger btn-xs pull-right" ng-click="data.classroom.teachers.splice($index, 1)">Remove</button>
+                </li>
+            </ul>
+        </div>
+      </div>
+
+      <div class="col-md-6">
+        <!--STUDENTS-->
+        <div class="form-group">
+            <label class="control-label" for="addStudent">Add Student</label>
+            <input type="text"
+                   placeholder="Start type the name"
+                   class="form-control input-sm"
+                   id="addStudent"
+                   ng-model="data.classroom.studentUsername"
+                   typeahead-on-select="addStudent($item)"
+                   typeahead="student.username for student in data.students | filter:$viewValue | filter:existingStudent | limitTo:8">
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading"><span class="badge pull-right">{{data.classroom.progresses.length}}</span> Students</div>
+            <ul data-ng-repeat="progress in data.classroom.progresses" class="list-group">
+                <li class="list-group-item">{{progress.student.name}} ({{progress.student.username}})
+                  <button type="button" class="btn btn-danger btn-xs pull-right" ng-click="removeStudent(progress)">Remove</button>
+                </li>
+            </ul>
+        </div>
+      </div>
+
+    </div>
+
+</form>
