--- a/public/views/contents/list.html
+++ b/public/views/contents/list.html
@@ -6,12 +6,16 @@
         <button class="btn btn-default btn-lg" ng-click="data.content = {}" data-ng-hide="data.content">Create new content</button>
     </div>
 
-	<ul class="contents unstyled" data-ng-hide="data.content">
-		<li data-ng-repeat="content in data.course.contents">
-			<h2>{{content.name}}</h2>
-			<div>{{content.code}}</div>
-            <button class="btn" ng-click="editContent($index)">Edit</button>
-            <button class="btn" ng-click="removeContent($index)">Remove</button>
+	<ul class="contents list-group" data-ng-hide="data.content">
+		<li data-ng-repeat="content in data.course.contents" class="list-group-item">
+            <div class="btn-group btn-group-sm pull-right">
+                <button class="btn btn-default" ng-click="editContent($index)"><span class="glyphicon glyphicon-pencil"></span> Edit</button>
+                <button class="btn btn-danger" ng-click="removeContent($index)">Remove</button>
+            </div>
+
+			<h4>{{content.name}}</h4>
+			<div class="text-muted">{{content.description}}</div>
+
 		</li>
 	</ul>
     <div ng-include="'views/contents/edit.html'" data-ng-show="data.content"></div>
