--- a/public/views/courses/edit.html
+++ b/public/views/courses/edit.html
@@ -3,10 +3,8 @@
 <div class="page-header">
     <h2>Course</h2>
 </div>
-
-<aside class="col-md-12">
     <h3 class="editable" ng-click="showEdit = true" ng-show="!showEdit && data.course._id">
-    {{data.course.name}}
+        {{data.course.name}}
         <small>
             {{data.course.code}}
         </small>
@@ -24,18 +22,17 @@
         </div>
 
         <div data-ng-show="data.course._id">
-            <button type="button" class="btn btn-link pull-left"
+            <button type="button" class="btn btn-default pull-left"
             ng-click="showEdit = false">Cancel</button>
             <button type="button" class="btn btn-link pull-left"
-            ng-click="remove(data.course)">Remove course <i class="glyphicon glyphicon-remove"></i></button>
+            ng-click="remove(data.course)"><span class="text-danger">Remove course <i class="glyphicon glyphicon-remove"></i></span></button>
             <button type="submit" class="btn btn-success btn-lg pull-right" data-ng-hide="data.content || data.classroom">Update course  <span class="glyphicon glyphicon-ok-sign"></span></button>
         </div>
         <div data-ng-hide="data.course._id">
             <button type="submit" class="btn btn-success btn-lg pull-right">Create course  <span class="glyphicon glyphicon-ok-sign"></span></button>
         </div>
     </form>
-
-</aside>
+        <hr>
 
 <div class="row">
 
@@ -48,4 +45,5 @@
          data-ng-show="global.user.permissions.manage && data.course._id"></div>
 </section>
 </div>
+<hr>
 </div>
