--- a/public/style/main.less
+++ b/public/style/main.less
@@ -98,8 +98,8 @@ a.list-group-item .list-group-item-heading {padding-right: 100px;}
   margin-bottom: 5px;
 }
 .sidebar-progress .panel-heading .badge {
-  background-color: #eee;
-  color: #bbb;
+  background-color: #ddd;
+  color: #aaa;
 }
 .progress {
   height: 6px;
@@ -120,6 +120,10 @@ a.list-group-item .list-group-item-heading {padding-right: 100px;}
 }
 
 .list-group-item h4 {margin-top: 0;}
+
+.panel {
+  .page-header {margin-top: 0;}
+}
 
 footer {
     position:fixed;
