Change wording of mark as unread

--- a/public/views/progress/panel.html
+++ b/public/views/progress/panel.html
@@ -16,14 +16,14 @@
             <h4 class="text-muted">{{data.content.description}}</h4>
 
         </div>
-        
+
         <div class="clearfix">
             <laere-embed></laere-embed>
         </div>
 
         <div class="col-md-12">
             <button class="btn btn-default btn-primary hide"><span class="glyphicon glyphicon-check"></span> Solve it</button>
-            <button class="btn btn-default" ng-click="unsee()"><span class="glyphicon glyphicon-eye-close"></span> Keep it as unseen</button>
+            <button class="btn btn-default" ng-click="unsee()"><span class="glyphicon glyphicon-eye-close"></span> Mark as unseen</button>
         </div>
     </div>
     <div class="panel-footer issues-list hide">
