--- a/public/views/progress/list.html
+++ b/public/views/progress/list.html
@@ -4,7 +4,7 @@
     </div>
 	<div class="list-group progresses">
 	<a data-ng-href="#/progress/{{progress._id}}" class="list-group-item" data-ng-repeat="progress in progresses">
-		<span class="badge">04 <i class="glyphicon glyphicon-book"></i></span>
+		<span class="badge">{{progress.classroom.course.contents.length}} <i class="glyphicon glyphicon-book"></i></span>
 	    <h4 class="list-group-item-heading">{{progress.classroom.course.name}}</h4>
 	    <p class="list-group-item-text">{{progress.classroom.name}}</p>
 	</a>
@@ -13,7 +13,7 @@
 <section class="col-md-6 col-md-offset-3" data-ng-controller="TeachController" data-ng-show="classrooms.length > 0">
 	<div class="list-group classrooms">
 	<a data-ng-href="#/teach/{{classroom._id}}" class="list-group-item" data-ng-repeat="classroom in classrooms">
-		<span class="badge">04 <i class="glyphicon glyphicon-book"></i></span>
+		<span class="badge">{{classroom.course.contents.length}} <i class="glyphicon glyphicon-book"></i></span>
 	    <h4 class="list-group-item-heading"><i class="glyphicon glyphicon-lock text-muted"></i> {{classroom.course.name}}</h4>
 	    <p class="list-group-item-text">{{classroom.name}}</p>
 	</a>
