--- a/public/views/progress/list.html
+++ b/public/views/progress/list.html
@@ -1,4 +1,4 @@
-<div class="page-header clearfix">
+<div class="col-md-6 col-md-offset-3 page-header clearfix">
     <h1 class="pull-left">My Classrooms</h1>
 </div>
 <section class="col-md-6 col-md-offset-3" data-ng-controller="ProgressController" data-ng-show="progresses.length > 0">
